# luanxie

./: .env.example  README.md  pyproject.toml
docs/: wiki.md
docs/assets/: README.md  capture_shots.py  seed_demo.py
scripts/: luanxie.service  run.sh
server/: _magic.py  _net.py  _ratelimit.py  _sanitizer.py  config.py  db.py  events.py  exporter.py  main.py  models.py
server/pipeline/: classify.py  llm.py  merge.py  prompts.py  transcribe.py  worker.py
server/routes/: auth.py  captures.py  export.py  review.py  settings.py  topics.py
web/: package-lock.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: DiffView.tsx  ErrorBoundary.tsx  Recorder.ts
web/src/pages/: CapturePage.tsx  InboxPage.tsx  LoginPage.tsx  ReviewPage.tsx  SettingsPage.tsx  TopicDetail.tsx  TopicsPage.tsx
